objects/CRM_CampaignOwnershipDetail__c.object
<CustomObject>
    <description>Stores the selected values for Campaign Onwershipp section on Campaign detail page</description>
    <fields>
        <fullName>CRM_Hospital__c</fullName>
        <description>Stores the Hospital name for the Campaign</description>
        <formula>Campaign_Location_Reference_Data_Mapping__r.CRM_Hospital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the Hospital name for the Campaign</inlineHelpText>
        <label>Hospital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <formula>Campaign_Location_Reference_Data_Mapping__r.CRM_IsActive__c</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Market__c</fullName>
        <description>stores the Market name for the Campaign</description>
        <formula>Campaign_Location_Reference_Data_Mapping__r.CRM_Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>stores the Market name for the Campaign</inlineHelpText>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Region__c</fullName>
        <description>Stores the region name for the campaign</description>
        <formula>Campaign_Location_Reference_Data_Mapping__r.CRM_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the region name for the campaign</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Location_Reference_Data_Mapping__c</fullName>
        <label>Campaign Location Reference Data Mapping</label>
        <referenceTo>CRM_CampaignLocationReferenceData__c</referenceTo>
        <relationshipLabel>Campaign Ownership Details</relationshipLabel>
        <relationshipName>Campaign_Ownership_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Stores the Campaign related to campaign ownership details</description>
        <inlineHelpText>Stores the Campaign related to campaign ownership details</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Ownership Details</relationshipLabel>
        <relationshipName>CRM_CampaignOwnershipDetailsMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campaign Ownership Detail</label>
    <nameField>
        <displayFormat>COD-{0000}</displayFormat>
        <label>Campaign Ownership Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Ownership Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>